--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,9 @@ header img {
     height: 8px;
     margin-left: 10px;
     background-image: url("../assets/icons/down-arrow.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 main {
@@ -124,5 +127,30 @@ main {
     min-width: 288px;
     max-width: 900px;
     margin: 0 auto;
-    
 }
+
+.main-exchange-container .backgroundImg {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    background-image: url(../assets/img/Bitcoin.svg);
+}
+
+.main-exchange-container h2 {
+    margin-bottom: 30px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+
+.main-exchange-container p {
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500px;
+    line-height: 1.6rem;
+    color: #757575;
+}
+
+
