--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,17 @@ color: #757575;
     background-repeat: no-repeat;
 }
 
+.currency-table--container .up {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("/assets/icons/trending-up.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .currency-table--date {
     width: 190px;
     height: 30px;
@@ -241,7 +252,77 @@ color: #757575;
     font-weight: 300px;
     line-height: 1.5rem;
     color: var(--warm-black);
+}
 
+.main-comission-table{
+    width: 70%;
+    margin: 0 auto;
+}
 
+.main-comission-table .comission-table-title{
+    text-align: left;
+    margin-left: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--secondary-blue);
+}
 
+.comission-table-container{
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+
+.comission-table-container td{
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    font-family: "Inter", sans-serif;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+
+.comission-table-container .table__right{
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.6rem;
+    color: #757575;
+}
+
+.comission-table-container .top-right{
+    border-radius: 0 15px 0 0;
+}
+
+.comission-table-container .top-left{
+    border-radius: 15px 0 0 0;
+}
+
+.comission-table-container .bottom-left{
+    border-radius: 0 0 0 15px;
+}
+
+.comission-table-container .bottom-right{
+    border-radius: 0 0 15px 0;
+}
+
+.comission-table-date{
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 8px;
+    border-radius: 8px;
+    background-color: var(--soft-blue);
+}
+
+.comission-table-date p{
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
 }
