--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ color: #757575;
 }
 
 .main-comission-table .comission-table-title{
-    text-align: left;
+    text-align: center;
     margin-left: 5px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -310,11 +310,32 @@ color: #757575;
     border-radius: 0 0 15px 0;
 }
 
+.comission-table-container .down {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("/assets/icons/trending-down.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.comission-table-container .up {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("/assets/icons/trending-up.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 .comission-table-date{
     width: 190px;
     height: 30px;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 15px;
     padding: 8px;
     border-radius: 8px;
     background-color: var(--soft-blue);
@@ -326,3 +347,47 @@ color: #757575;
     font-weight: 300;
     color: var(--warm-black);
 }
+
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background: var(--warm-black);
+}
+
+.product-detail--batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    top: -10px;
+    left: calc(50% - 20px);
+    background-image: url(/assets/icons/batata.svg);
+}
+
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
