--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,26 @@
-/*
-1 Posicionamiento --> static, absolute, relative, fixed
 
-2 Modelo de caja (Box model) --> margin, border, padding, content
-
-3 Tipografía --> tipos, tamaños de fuente, etc
-
-4 Estilos visuales --> box-shadow, border-radius, gradient, etc
-
-5 Otros --> reglas CSS y más
-*/ 
 :root {
-    /* colores */
---bitcoin-orange: #f7931a;
---soft-orange: #ffe9d5;
---secondary-blue: #1a9af7;
---soft-blue: #e7f5ff;
---warm-black: #282623;
---black: #201e1c;
---grey: #bababa;
---off-white: #faf8f7;
---just-white: #fff;
-}
-
-* {
-    box-sizing: content-box;
+    /* Colors */
+    --bitcoin-orange: #f7931a;
+    --soft-orange: #ffe9d5;
+    --secondary-blue: #1a9af7;
+    --soft-blue: #e7f5ff;
+    --warm-black: #282623;
+    --black: #201e1c;
+    --off-white: #faf8f7;
+    --just-white: #fff;
+    --grey: #bababa;
+  }
+  * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-html {
+  }
+  html {
     font-size: 62.5%;
     font-family: "DM Sans", sans-serif;
-}
-
-header {
+  }
+  header {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -42,62 +29,61 @@ header {
     min-width: 320px;
     height: 334px;
     text-align: center;
-    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
-}
-
-header img {
-    width: 150px;
+    background: linear-gradient(
+      208.83deg,
+      var(--black) 16.69%,
+      var(--bitcoin-orange) 100%
+    );
+  }
+  header img {
+    width: 151px;
     height: 24px;
     margin-top: 60px;
     align-self: center;
-}
-
-.header--title--container {
+  }
+  .header--title-container {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
-    height: 288px;
-    margin-top: 40px;
+    height: 218px;
+    margin-top: 50px;
     text-align: center;
     align-self: center;
-}
-
-.header--title--container h1 {
+  }
+  
+  .header--title-container h1 {
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
-}
-
-.header--title--container p {
+  }
+  .header--title-container p {
     margin-top: 25px;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
     color: var(--soft-orange);
-}
-
-.header--title--container .header--button {
+  }
+  .header--title-container .header--button {
     position: absolute;
-    left: calc(50% - 130px);
+    left: calc(50% - 118px);
     top: 270px;
     display: block;
     margin-top: 35px;
     padding: 15px;
     width: 229px;
     height: 48px;
-    background-color: var(--off-white);
-    /* sombras */
-    box-shadow: 0px 4 px 8px rgba(89, 73, 30, 0.16);
+    background: var(--off-white);
+    /* Sombra  */
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     font-size: 1.4rem;
     font-weight: bold;
     text-decoration: none;
     color: var(--black);
-}
-
-.header--button span {
+  }
+  .header--title-container .header--button span {
     display: inline-block;
     width: 13px;
     height: 8px;
@@ -106,325 +92,400 @@ header img {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-main {
+  }
+  main {
     width: 100%;
     height: auto;
     background-color: var(--off-white);
-}
-
-.main-exchange-container {
+  }
+  .main-exchange-container {
     width: 100%;
     height: auto;
     padding-top: 80px;
     padding-bottom: 30px;
     text-align: center;
-}
-
-.main-exchange-container--title {
+  }
+  .main-exchange-container--title {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
     margin: 0 auto;
-}
-
-.main-exchange-container .backgroundImg {
+  }
+  .main-exchange-container .backgroundImg {
     width: 200px;
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background-image: url(../assets/img/Bitcoin.svg);
-}
-
-.main-exchange-container h2 {
+    background-image: url("../assets/img/Bitcoin.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .main-exchange-container h2 {
     margin-bottom: 30px;
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--black);
-}
-
-.main-exchange-container p {
+  }
+  .main-exchange-container p {
     margin-bottom: 30px;
     font-size: 1.4rem;
-    font-weight: 500px;
+    font-weight: 500;
     line-height: 1.6rem;
     color: #757575;
-}
-
-.main-currency-table {
+  }
+  .main-currency-table,
+  .main-commissions-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
     margin: 0 auto;
+  
     font-family: "Inter", sans-serif;
-}
-
-.main-currency-table .currency-table--title {
+  }
+  .main-currency-table .currency-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
     color: var(--bitcoin-orange);
-}
-
-.currency-table--container {
-    width: 90%;
-    min-width: 230px;
-    max-width: 300px;
-    height: 250px;
-    margin: 0 auto;
-}
-
-.currency-table--container table {
-    width: 100%;
-    height: 100%;
-}
-
-.currency-table--container td {
-    width: 50%;
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 1.9rem;
-    color: var(--grey);
-    background-color: var(--just-white);
-}
-
-.currency-table--container .table__top-left {
-    border-radius: 15px 0 0 0;
-}
-
-.currency-table--container .table__top-right {
-    border-radius: 0 15px 0 0;
-}
-
-.currency-table--container .table__bottom-left {
-    border-radius: 0 0 0 15px;
-}
-
-.currency-table--container .table__bottom-right {
-    border-radius: 0 0 15px 0;
-}
-
-.currency-table--container .table__right {
-font-size: 1.4rem;
-font-weight: normal;
-line-height: 1.7rem;
-color: #757575;
-}
-
-.currency-table--container .down {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-    background-image: url("/assets/icons/trending-down.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.currency-table--container .up {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-    background-image: url("/assets/icons/trending-up.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.currency-table--date {
-    width: 190px;
-    height: 30px;
-    margin: 0 auto;
-    margin-top: 15px;
-    padding: 8px;
-    background-color: var(--soft-orange);
-    border-radius: 8px;
-}
-
-.currency-table--date p {
-    font-size: 1.2rem;
-    font-weight: 300px;
-    line-height: 1.5rem;
-    color: var(--warm-black);
-}
-
-.main-comission-table{
-    width: 70%;
-    margin: 0 auto;
-}
-
-.main-comission-table .comission-table-title{
-    text-align: center;
-    margin-left: 5px;
-    margin-top: 15px;
+  }
+  .main-commissions-table .commissions-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
     color: var(--secondary-blue);
-}
-
-.comission-table-container{
-    width: 70%;
+  }
+  .currency-table--container,
+  .commissions-table--container {
+    width: 90%;
     min-width: 230px;
     max-width: 300px;
     height: 250px;
     margin: 0 auto;
-}
-
-.comission-table-container td{
+    /* background-color: #fff; */
+    border-radius: 15px;
+  }
+  .currency-table--container table,
+  .commissions-table--container table {
+    width: 100%;
+    height: 100%;
+  }
+  .currency-table--container td,
+  .commissions-table--container td {
+    width: 50%;
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.9rem;
-    font-family: "Inter", sans-serif;
     color: var(--grey);
+    /* border-bottom: 1px solid #faf8f7; */
     background-color: var(--just-white);
-}
-
-.comission-table-container .table__right{
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.6rem;
-    color: #757575;
-}
-
-.comission-table-container .top-right{
-    border-radius: 0 15px 0 0;
-}
-
-.comission-table-container .top-left{
+  }
+  .currency-table--container .table__top-left,
+  .commissions-table--container .table__top-left {
     border-radius: 15px 0 0 0;
-}
-
-.comission-table-container .bottom-left{
+  }
+  .currency-table--container .table__top-right,
+  .commissions-table--container .table__top-right {
+    border-radius: 0 15px 0 0;
+  }
+  .currency-table--container .table__bottom-left,
+  .commissions-table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
-}
-
-.comission-table-container .bottom-right{
+  }
+  .currency-table--container .table__bottom-right,
+  .commissions-table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
-}
-
-.comission-table-container .down {
+  }
+  .currency-table--container .table__right,
+  .commissions-table--container .table__right {
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+  }
+  .currency-table--container .up {
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url("/assets/icons/trending-down.svg");
+    background-image: url("../assets/icons/trending-up.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-.comission-table-container .up {
+  }
+  .currency-table--container .down {
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url("/assets/icons/trending-up.svg");
+    background-image: url("../assets/icons/trending-down.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-.comission-table-date{
+  }
+  .currency-table--date {
     width: 190px;
-    height: 30px;
+    height: 31px;
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
+    background-color: var(--soft-orange);
     border-radius: 8px;
+  }
+  .commissions-table--date {
+    width: 190px;
+    height: 31px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
     background-color: var(--soft-blue);
-}
-
-.comission-table-date p{
+    border-radius: 8px;
+  }
+  .currency-table--date p,
+  .commissions-table--date p {
+    margin: 7px;
     font-size: 1.2rem;
-    line-height: 1.5rem;
-    font-weight: 300;
-    color: var(--warm-black);
-}
-
-.main-product-detail {
+    line-height: 1.5px;
+  }
+  
+  .main-product-detail {
     position: relative;
     width: 100%;
     min-width: 320px;
     height: auto;
     padding: 20px 10px;
-    background: var(--warm-black);
-}
-
-.product-detail--batata-logo {
+    background-color: var(--black);
+  }
+  .product-detail--batata-logo {
     position: absolute;
-    width: 40px;
-    height: 25px;
-    top: -10px;
+    width: 40.57px;
+    height: 24.01px;
     left: calc(50% - 20px);
-    background-image: url(/assets/icons/batata.svg);
-}
-
-.product-detail--title {
+    top: -10px;
+    background-image: url("../assets/icons/batata.svg");
+  }
+  .product-detail--title {
     width: 90%;
     min-width: 288px;
     height: auto;
     margin: 0 auto;
     margin-top: 50px;
     text-align: center;
-}
-
-.product-detail--title h2 {
+  }
+  .product-detail--title h2 {
     margin-bottom: 20px;
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
-}
-
-.product-detail--title p {
+  }
+  .product-detail--title p {
     margin-bottom: 20px;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
     color: #808080;
-}
-
-.product-detail--card {
+  }
+  .product-detail--card {
     width: 90%;
     min-width: 288px;
     max-width: 400px;
-    height: 150px;
+    height: 152px;
     margin: 15px auto;
     padding: 15px;
-    background-color: var(--black);
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
-}
-
-.product-detail--card .clock {
+    background-color: var(--warm-black);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+    border-radius: 4px;
+  }
+  .product-detail--card .clock {
     display: inline-block;
     width: 20px;
     height: 20px;
+    margin: 0 auto;
     margin-bottom: 10px;
-    background-image: url(/assets/icons/clock.svg);
+    background-image: url("../assets/icons/clock.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-.product--card-title {
+  }
+  .product-detail--card .eye {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    background-image: url("../assets/icons/eye.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .product-detail--card .dollar {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    background-image: url("../assets/icons/dollar-sign.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .product-detail--card .check {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    background-image: url("../assets/icons/check-circle.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .product--card_title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 1.8rem;
     color: var(--just-white);
-}
-
-.product--card-body {
+  }
+  .product--card_body {
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
     color: #808080;
-}
+  }
+  .bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url("../assets/img/bitcoinbaby2x.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+  }
+  .bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+  }
+  .main-plans-container {
+    width: 100%;
+    min-height: 320px;
+    padding-bottom: 70px;
+    text-align: center;
+  }
+  .main-plans-container h2 {
+    padding-top: 50px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+  }
+  .main-plans-container p {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+  }
+  .plans-container--slider {
+    display: flex;
+    /* gap: 50px; Aun no está soportado por todos los navegadores :( */
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+  }
+  .plans-container--card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px 30px 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+  }
+  .plans-container--card .recommended {
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    left: calc(50% - 60px);
+    top: -15px;
+    margin: 0;
+    padding: 6px;
+    background-color: var(--bitcoin-orange);
+    border-radius: 8px;
+    color: var(--just-white);
+  }
+  .plan-card--title {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+  }
+  .plans-container--card .plan-card--price {
+    padding: 5px 0;
+    font-size: 5.3rem;
+    font-weight: bold;
+    line-height: 6.3rem;
+    color: black;
+  }
+  .plans-container--card .plan-card--saving {
+    padding-top: 0;
+  }
+  .plan-card--ca {
+    width: 151px;
+    height: 48px;
+    margin-top: 20px;
+    background: var(--off-white);
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+  }
+  .plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../assets/icons/orange-right-arrow.svg");
+    vertical-align: text-bottom;
+  }
+  footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+  }
+  footer section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+  .left ul {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+  }
+  .left li {
+    margin: 10px 0;
+  }
+  .left a {
+    text-decoration: none;
+    color: var(--just-white);
+  }
